--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
+#*
+*$
+*.BAK
+*.Z
+*.bak
 *.class
-
-# Package Files #
-*.jar
-*.war
-*.ear
+*.elc
+*.ln
+*.log
+*.o
+*.obj
+*.olb
+*.old
+*.orig
+*.pyc
+*.pyo
+*.rej
+*~
+,*
+.#*
+.DS_Store
+.del-*
+.make.state
+.nse_depinfo
+CVS.adm
+RCS
+RCSLOG
+SCCS
+_$*
+master
